--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        // Enable all architectures to fix INSTALL_FAILED_NO_MATCHING_ABIS
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
     signingConfigs {
         debug {
