--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.72.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
+    "react-native-svg": "^13.4.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^10.0.3"
   },
