--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DTR",
+  "name": "SGIG Defect Tracker",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,7 +24,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/cli": "^11.3.7",
+    "@react-native-community/cli": "^19.1.1",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
