--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+android/.gradle/8.0.1/executionHistory/executionHistory.lock
+android/.gradle/8.0.1/fileHashes/fileHashes.bin
+android/.gradle/8.0.1/fileHashes/fileHashes.lock
+android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+android/.gradle/file-system.probe
